--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>бургер чеддер</title>
+    <title>Burger House</title>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="icon" type="image/x-icon" href="./images/Logo.png">
 </head>
 <body>
     <section class="main">
@@ -87,7 +88,7 @@
             <div class="products_items">
                 <div class="products_item">
                     <div class="products_item_image">
-                        <img src="./images/1.png" alt="" id="productImage">
+                        <img src="./images/1.png" alt="" class="productImage">
                         <p class="products_item_title">Бургер чеддер и бекон</p>
                         <p class="products_item_text">
                             Котлета из говядины криспи, булочка, томат, сыр Чеддер, грудинка, лук красный, салат
@@ -113,7 +114,7 @@
                 </div>
                 <div class="products_item">
                     <div class="products_item_image">
-                        <img src="./images/2.png" alt="" id="productImage">
+                        <img src="./images/2.png" alt="" class="productImage">
                         <p class="products_item_title">BBQ с беконом и курицей</p>
                         <p class="products_item_text">
                             Булочка бриошь с кунжутом, куриная котлета, сыр чеддер, томат, огурец маринованный,
@@ -139,7 +140,7 @@
                 </div>
                 <div class="products_item">
                     <div class="products_item_image">
-                        <img src="./images/3.png" alt="" id="productImage">
+                        <img src="./images/3.png" alt="" class="productImage">
                         <p class="products_item_title">Дабл биф бургер</p>
                         <p class="products_item_text">
                             Две говяжьи котлеты, сыр чеддер, салат романо, маринованные огурцы, свежий томат,
@@ -435,6 +436,6 @@
             </p>
         </div>
     </footer>
-    <script src="scripts/script.js"></script>
+    <script src="./scripts/index.js"></script>
 </body>
 </html>
