--- a/index.html
+++ b/index.html
@@ -437,5 +437,13 @@
         </div>
     </footer>
     <script src="./scripts/index.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-F0KDQZ9ZYX');  // Replace with your GA4 Measurement ID
+</script>
+
 </body>
 </html>
